<resources>
    <string name="app_name">VM Player</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="music_player">Music Player</string>
    <string name="now_playing">Now Playing</string>
    <string name="scan_media">Scan Media</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="albums">Albums</string>
    <string name="all_songs">All Songs</string>
    <string name="artists">Artists</string>
    <string name="genres">Genres</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sendto">Send to</string>
    <string name="equalizer">Equalizer</string>
    <string name="playing_music_from_sd_card">Playing Music from SD Card</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Broadcast Tutorial</string>
    <string name="notificationtitle">Broadcast Tutorial</string>
    <string name="lbltitle">"Title : "</string>
    <string name="lbltext">"Text : "</string>
    <string name="BroadcastReceiver">Broadcast Receiver</string>
    <string name="wifioff">WIFI OFF</string>
    <string name="wifion">WIFI ON</string>
    <string name="play_pause">Play/Pause</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="_5_20">5:20</string>
    <string name="create_playlist">Create Playlist</string>


    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>



</resources>
