<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_nowplaying"
            android:title="@string/now_playing"
            android:icon="@drawable/ic_library_music_black_24dp"/>

        <item
            android:id="@+id/nav_scanmedia"
            android:title="@string/scan_media"
            android:icon="@drawable/ic_loop_black_24dp"/>
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/equalizer"
            android:icon="@drawable/equ_128"
            android:title="@string/equalizer" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
    </group>


</menu>
